[tool.poetry]
name = "test-workflows"
version = "0.1.0"
description = ""
authors = ["Norayr Mamulyan <norayr@instigatemobile.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
pylint = "2.15.5"
black = "22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
